Relena knows nothing v2
gotten everything else to work but replacements

--- a/hangman.html
+++ b/hangman.html
@@ -4,8 +4,9 @@
     </head>
     <body>
         <h1 id="title">Press any key to start!</h1>
+        <h2 id="word"></h2>
         <p id="life">Life: 6</p>
-        <p id="wrongGuesses">Wrong gueses:</p>
+        <p id="wrongGuesses">Wrong guesses:</p>
         <p id="wins">Wins: 0</p>
         <p id="losses">Losses: 0</p>
         <script src="gameLogic.js">  
